
   
Modules
-------

 - Media: Updated to work with SoundManager instead of jPlayer
 - Media: Added stopSound()
 - Media: Music now fades out when stopped or another song is played, and
   all functions that stop sounds can fade out instead
 - Parser: Character input support
 - Parser: Commands triggered while a turn is running are put into a queue
   and ran when the prompt is ready


Releases
--------

 - The library is now packaged to three complete minified library files that
   includes everything needed by the system, one for each engine and one
   "vanilla" with no engine
 - Added a configurable loader message for Parchment
 - Revised the build script
 


Release 2.4 (2012-09-29)
========================

Support for Parchment (Z-machine) and Inform 7.

Modules
-------

 - Cookie: Added vorple.cookie.list()
 - Core: changed the initialization event from "vorpleInit" to "init.vorple",
   in preparation of namespaced parser events
 - Core: Made vorple.core.engine() return the engine that's used to initialize
   Vorple, not the engine that is otherwise available
 - Core: Removed the clickLink() method, replaced by vorple.undum.doClick() 
   and vorple.undum.doLink()
 - Html: Fixed a bug where vorple.html.url() would not return correct values
   when no filename was given
 - Media: Changed the default YouTube video width from 640 pixels to 600 pixels
   so that the videos fit in the new Parchment version layout
 - Parser: Added the module and Parchment/Inform 7 support
 - Undum: Added doClick() and doLink() that expose undum.doClick()
   and undum.doLink()


Libraries
---------

 - Updated the Noty library
    
   
Tests
-----

 - Restructured the tests so that they can be run at the same time
 - Updated QUnit to the latest version



Release 1.3 (2012-04-26)
========================

Documentation
-------------

 - Added a fallback to local jQuery UI library if the CDN fails
 - Added the undum namespace to examples where it was missing